--- a/style.css
+++ b/style.css
@@ -1,34 +1,35 @@
-body
-{
-	background: url("/projekti/img/banner3.jpg");
-	background-size: 1400px 570px;
-	background-position: center;
-	background-color: black;
-	background-repeat: no-repeat;
-	background-attachment: fixed; 
+#page-wrapper {
+  background-color: #F1F1F1 !important;
+}
+
+
+
+.product_image {
+
+width: 200px !important;
+height: 100px !important;
+
 
 }
 
-.login-box{
-	max-width: 700px;
-	float: none;
-	margin: 150px auto;
-}
-.log{
-	background: rgba(211,211,211,0.5);
-	padding: 40px;
-	margin: 30px 10px 10px 10px;
+#admin_sidebar .form-group {
+
+background-color: #fff;
+padding: 8px;
+
 }
 
-h2{
-	font-style: italic;
-	font-family: serif;
-	font-weight: lighter;
+#admin_sidebar .form-group hr {
+
+margin-top: 10px;
+margin-bottom: 10px;
+
+
 }
 
-.butoni{
-	background-color: black;
-	color: white;
-	padding: 10px;
-	outline: solid 2px black;
+#admin_sidebar .btn{
+
+width: 49%;
+
 }
+
